Fixed break line in button

--- a/one-click-share-chrome-ext/popup.html
+++ b/one-click-share-chrome-ext/popup.html
@@ -11,7 +11,7 @@
 	  	</style>
 	    <script src="popup.js"></script>
 	</head>
-  	<body>
+  	<body style=min-width:200>
         <div id="main2"></div>
   	</body>
 </html>
