--- a/one-click-share-chrome-ext/popup.html
+++ b/one-click-share-chrome-ext/popup.html
@@ -3,15 +3,12 @@
 	  	<style type="text/css">
 	  			a {
 	  				font-family: Tahoma, serif;
+	  				text-decoration: none;
 	  			}
 	  			.button {
 	  				width: 200px;
 	  			}
-	  			a:link    { color: #c00;text-decoration: none;}  /* unvisited links */
-				a:visited { color: #000 }  /* visited links   */
-				a:hover   { color: #00c }  /* user hovers     */
-				a:active  { color: #ccc }  /* active links    */
-
+				a:hover   { text-decoration: underline; }  /* user hovers     */
 				#links-content-div{
 					margin: 10px;
 				}
