Integrated login into popup page

--- a/one-click-share-chrome-ext-test/options.html
+++ b/one-click-share-chrome-ext-test/options.html
@@ -24,11 +24,14 @@
     </style>
     <script src="options.js"></script>
 </head>
-<h1>User management Page</h1>
 
-<body>
-    <button id="login">Login</button>
-    <button id="logout">Logout</button>
+<body style="width: 30em; background: white">
+    <div id="info-ui">
+    </div>
+    <div id="login-ui">
+        <button id="login">Login</button>
+        <button id="logout">Logout</button>
+    </div>
 </body>
 
 </html>
