--- a/one-click-share-chrome-ext-test/options.html
+++ b/one-click-share-chrome-ext-test/options.html
@@ -22,7 +22,9 @@
             margin: 10px;
         }
     </style>
-    <script src="options.js"></script>
+    <script src="login.js"></script>
+    <script src="background.js"></script>
+
 </head>
 
 <body style="width: 30em; background: white">
