Adding published extension

--- a/one-click-share-chrome-ext-published/options.html
+++ b/one-click-share-chrome-ext-published/options.html
@@ -22,13 +22,18 @@
             margin: 10px;
         }
     </style>
-    <script src="options.js"></script>
-</head>
-<h1>User management Page</h1>
+    <script src="login.js"></script>
+    <script src="background.js"></script>
 
-<body>
-    <button id="login">Login</button>
-    <button id="logout">Logout</button>
+</head>
+
+<body style="width: 30em; background: white">
+    <div id="info-ui">
+    </div>
+    <div id="login-ui">
+        <button id="login">Login</button>
+        <button id="logout">Logout</button>
+    </div>
 </body>
 
 </html>
