Testing last contacted feature

--- a/one-click-share-chrome-ext-public/popup.html
+++ b/one-click-share-chrome-ext-public/popup.html
@@ -40,6 +40,8 @@
     <script src="jqueryui/external/jquery/jquery.js"></script>
     <script src="jqueryui/jquery-ui.js"></script>
     <script src="popup.js"></script>
+    <script src="background.js"></script>
+
 </head>
 
 <body>
