--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -65,13 +65,16 @@
                     </li>
                 </ul>
                 <div id="tabs-1">
-                    <div id="send-button-div">
-                        <button id="send-button-id"></button>
-                    </div>
                     <p>Email:
                         <input type="text" id="email-id">
                     </p>
+                    <div id="send-button-div">
+                        <button id="send-button-id"></button>
+                    </div>
+                    <h3>Last Contacted:</h3>
                     <div id="last-contact-div"></div>
+                    <p>Note:Click on the user to share active tab url.</p>
+
                 </div>
                 <div id="tabs-2">
                     <h3>Incoming Links:</h3>
