--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -61,7 +61,9 @@
                 <ul>
                     <li><a href="#tabs-1">Share</a>
                     </li>
-                    <li><a href="#tabs-2">Feed</a>
+                    <li><a href="#tabs-2">Incoming</a>
+                    </li>
+                    <li><a href="#tabs-3">Outgoing</a>
                     </li>
                 </ul>
                 <div id="tabs-1">
@@ -77,9 +79,9 @@
 
                 </div>
                 <div id="tabs-2">
-                    <h3>Incoming Links:</h3>
                     <div id="in-links-content-div"></div>
-                    <h3>Outgoing Links:</h3>
+                </div>
+                <div id="tabs-3">
                     <div id="out-links-content-div"></div>
                 </div>
             </div>
@@ -89,4 +91,3 @@
 </body>
 
 </html>
-
