--- a/one-click-share-chrome-ext-published/popup.html
+++ b/one-click-share-chrome-ext-published/popup.html
@@ -61,9 +61,9 @@
                 <ul>
                     <li><a href="#tabs-1">Share</a>
                     </li>
-                    <li><a href="#tabs-2">Incoming</a>
+                    <li><a href="#tabs-2">Inbox</a>
                     </li>
-                    <li><a href="#tabs-3">Outgoing</a>
+                    <li><a href="#tabs-3">Sent</a>
                     </li>
                 </ul>
                 <div id="tabs-1">
