Fixing UI Issue

--- a/one-click-share-chrome-ext-test/options.html
+++ b/one-click-share-chrome-ext-test/options.html
@@ -28,12 +28,17 @@
 </head>
 
 <body style="width: 30em; background: white">
+    <h3>User Account Management <h3>
     <div id="info-ui">
     </div>
     <div id="login-ui">
-        <button id="login">Login</button>
+        <button id="login">Google Sign In</button>
+        <p></p>
         <button id="logout">Logout</button>
     </div>
+    <div id="main-ui">
+    </div>
+    <div id="options-page"></div>
 </body>
 
 </html>
