--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -52,7 +52,7 @@
         <div id="info-ui">
         </div>
         <div id="login-ui">
-            <button id="login">Login</button>
+            <a id="login" href="options.html">Manage Your Account</a>
             <button id="logout">Logout</button>
             <p></p>
         </div>
