Fixing UI Issue

--- a/one-click-share-chrome-ext-test/options.html
+++ b/one-click-share-chrome-ext-test/options.html
@@ -28,7 +28,7 @@
 </head>
 
 <body style="width: 30em; background: white">
-    <h3>User Account Management <h3>
+    <h3>User Account Management </h3>
     <div id="info-ui">
     </div>
     <div id="login-ui">
