--- a/one-click-share-chrome-ext-test/options.html
+++ b/one-click-share-chrome-ext-test/options.html
@@ -24,7 +24,7 @@
     </style>
     <script src="login.js"></script>
     <script src="background.js"></script>
-
+    <script src="env.js"></script>
 </head>
 
 <body style="width: 30em; background: white">
