--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -37,13 +37,20 @@
             overflow: auto;
             height: 100%;
         }
+        label.aligned {
+            display: inline-block;
+            width: 3em;
+        }
+        .link-field input {
+            width: 19em;
+        }
     </style>
     <script src="jqueryui/external/jquery/jquery.js"></script>
     <script src="jqueryui/jquery-ui.js"></script>
     <script src="popup.js"></script>
     <script src="login.js"></script>
     <script src="background.js"></script>
-
+    <script src="env.js"></script>
 
 </head>
 
@@ -67,15 +74,27 @@
                     </li>
                 </ul>
                 <div id="tabs-1">
-                    <p>Email:
-                        <input type="text" id="email-id">
-                    </p>
-                    <div id="send-button-div">
-                        <button id="send-button-id"></button>
+                    <div class="link-info">
+                        <p class="link-field">
+                            <label class="aligned">Title:</label>
+                            <input type="text" id="link-title" />
+                        </p>
+                        <p class="link-field">
+                            <label class="aligned">URL:</label>
+                            <input type="text" id="link-url" readonly/>
+                        </p>
+                        <hr/>
                     </div>
+                    <form style="display:inline">
+                        <label>Email Id:</label>
+                        <input style="display:inline" type="text" id="email-id" />
+                        <button id="send-button">Send</button>
+                    </form>
                     <h3>Last Contacted:</h3>
                     <div id="last-contact-div"></div>
-                    <p>Note:Click on the user to share active tab url.</p>
+                    <p>
+                        <label style="font-size:10px">Note: To send a link either click on the user name or specify email id and click on the 'Send' button.</label>
+                    </p>
 
                 </div>
                 <div id="tabs-2">
