Integrated new UI changes/ renamed older plugin

--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -22,7 +22,7 @@
             <p></p>
         </div>
         <div id="main-ui">
-            <div id="tabs" style="height: 100%;">
+            <div id="tabs">
                 <ul>
                     <li><a href="#tabs-1">Share</a>
                     </li>
