Adding link information, not saving external id based used

--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -41,6 +41,7 @@
                             <label class="aligned">URL:</label>
                             <input type="text" id="link-url" readonly/>
                         </p>
+                        <label id="link-status"></label>
                         <hr/>
                     </div>
                     <form style="display:inline">
