Added autocomplete support for frenz

--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -46,7 +46,7 @@
                     </div>
                     <form style="display:inline">
                         <label>Email Id:</label>
-                        <input style="display:inline" type="text" id="email-id" />
+                        <input class="auto-frnd" style="display:inline" type="text" id="email-id" />
                         <button id="send-button">Send</button>
                     </form>
                     <h3>Last Contacted:</h3>
