--- a/one-click-share-chrome-ext-test/popup.html
+++ b/one-click-share-chrome-ext-test/popup.html
@@ -9,6 +9,8 @@
     <script src="env.js"></script>
     <link href="popup.css" rel="stylesheet">
     <script src="popup.js"></script>
+    <script src="links.js"></script>
+
 
 </head>
 
